force-app/main/default/objects/OneCRM__DeclarativeLookupRollupSummaries__c/fields/OneCRM__disableRollupTrigger__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__disableRollupTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>disableRollupTrigger</label>
    <type>Checkbox</type>
</CustomField>