force-app/main/default/objects/OneCRM__DeclarativeLookupRollupSummaries__c/fields/OneCRM__HideManageLookupRollupSummariesInfo__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__HideManageLookupRollupSummariesInfo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Manage Lookup Rollup Summaries Info</label>
    <type>Checkbox</type>
</CustomField>