force-app/main/default/objects/OneCRM__DeclarativeLookupRollupSummaries__c/fields/OneCRM__ScheduledJobScopeSize__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__ScheduledJobScopeSize__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Scheduled Job Scope Size</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>